finished controller operations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/pokedex
+spring.datasource.username=postgres
+spring.datasource.password=lolcarlos
+spring.jpa.hibernate.ddl-auto=update
