refactored and finished service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/pokedex
 spring.datasource.username=postgres
 spring.datasource.password=lolcarlos
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+spring.jpa.generate-ddl=false
+api.version=/v1
+
